--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     parâmetros musicais, como tom, dinâmica, andamento e muito mais.</h1>
 
   <section class="teclado">
-    <button class="tecla tecla_pom">Pom</button>
-    <button class="tecla tecla_clap">Clap</button>
-    <button class="tecla tecla_tim">Tim</button>
+    <button onclick="alert('POM')" class="tecla tecla_pom">Pom</button>
+    <button onclick="alert('CLAP')" class="tecla tecla_clap">Clap</button>
+    <button onclick="alert('TIM')" class="tecla tecla_tim">Tim</button>
 
     <button class="tecla tecla_puff">Puff</button>
     <button class="tecla tecla_splash">Splash</button>
