--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     parâmetros musicais, como tom, dinâmica, andamento e muito mais.</h1>
 
   <section class="teclado">
-    <button onclick="alert('POM')" class="tecla tecla_pom">Pom</button>
+    <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
     <button onclick="alert('CLAP')" class="tecla tecla_clap">Clap</button>
     <button onclick="alert('TIM')" class="tecla tecla_tim">Tim</button>
 
@@ -46,7 +46,7 @@
   <audio controls src="sounds/keyz.wav" id="som_tecla_psh"></audio>
   <audio controls src="sounds/keyx.wav" id="som_tecla_tic"></audio>
   <audio controls src="sounds/keyc.wav" id="som_tecla_tom"></audio>
-  
+
   <script src="main.js"></script>
 </body>
 
