--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="teclado">
     <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
-    <button onclick="alert('CLAP')" class="tecla tecla_clap">Clap</button>
+    <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
     <button onclick="alert('TIM')" class="tecla tecla_tim">Tim</button>
 
     <button onclick="alert('PUFF')" class="tecla tecla_puff">Puff</button>
