--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
   <section class="teclado">
     <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
     <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
-    <button onclick="alert('TIM')" class="tecla tecla_tim">Tim</button>
+    <button onclick="tocaSomPom()" class="tecla tecla_tim">Tim</button>
 
-    <button onclick="alert('PUFF')" class="tecla tecla_puff">Puff</button>
-    <button onclick="alert('SPLASH')" class="tecla tecla_splash">Splash</button>
-    <button onclick="alert('TOIM')" class="tecla tecla_toim">Toim</button>
+    <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
+    <button onclick="tocaSomSplash()" class="tecla tecla_splash">Splash</button>
+    <button onclick="tocaSomToim()" class="tecla tecla_toim">Toim</button>
 
-    <button onclick="alert('PSH')" class="tecla tecla_psh">Psh</button>
-    <button onclick="alert('TIC')" class="tecla tecla_tic">Tic</button>
-    <button onclick="alert('TOM')" class="tecla tecla_tom">Tom</button>
+    <button onclick="tocaSomPsh()" class="tecla tecla_psh">Psh</button>
+    <button onclick="tocaSomTic()" class="tecla tecla_tic">Tic</button>
+    <button onclick="tocaSomTom()" class="tecla tecla_tom">Tom</button>
   </section>
 
   <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
