adicioannado mais um bottom

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <section class="teclado">
     <button onclick="tocaSomPom()" class="tecla tecla_shoryuken">Shoryuken</button>
+    <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
     <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
     <button onclick="tocaSomTim()" class="tecla tecla_tim">Tim</button>
 
@@ -38,6 +39,7 @@
   </section>
 
   <audio src="sounds/shoryuken.mp3" id="som_tecla_shoryuken"></audio>
+  <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
   <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
   <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
   <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
