--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     parâmetros musicais, como tom, dinâmica, andamento e muito mais.</h1>
 
   <section class="teclado">
-    <button onclick="tocaSomPom()" class="tecla tecla_shoryuken">Shoryuken</button>
+    <button onclick="tocaSomPom()" class="tecla tecla_shoryuken">Shoryu</button>
     <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
     <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
     <button onclick="tocaSomTim()" class="tecla tecla_tim">Tim</button>
