--- a/newSongs.html
+++ b/newSongs.html
@@ -22,7 +22,7 @@
   <button><a href="index.html">Velhos Sons</a></button>
   <section class="teclado">
     <button onclick="tocaSomShoryuken()" class="tecla tecla_shoryuken">Shoryu</button>
-    <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
+    <button onclick="tocaSomKid()" class="tecla tecla_kid">Kid</button>
     <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
 
     <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
@@ -35,7 +35,7 @@
   </section>
 
   <audio src="sounds/shoryuken.mp3" id="som_tecla_shoryuken"></audio>
-  <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
+  <audio src="sounds/kid.mp3" id="som_tecla_kid"></audio>
   <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
   <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
   <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
