--- a/newSongs.html
+++ b/newSongs.html
@@ -23,7 +23,7 @@
   <section class="teclado">
     <button onclick="tocaSomShoryuken()" class="tecla tecla_shoryuken">Shoryu</button>
     <button onclick="tocaSomKid()" class="tecla tecla_kid">Kid</button>
-    <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
+    <button onclick="tocaSomBemVindo()" class="tecla tecla_bem_vindo">Bem-Vindo</button>
 
     <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
     <button onclick="tocaSomSplash()" class="tecla tecla_splash">Splash</button>
@@ -36,7 +36,7 @@
 
   <audio src="sounds/shoryuken.mp3" id="som_tecla_shoryuken"></audio>
   <audio src="sounds/kid.mp3" id="som_tecla_kid"></audio>
-  <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+  <audio src="sounds/bem-vindo.mp3" id="som_tecla_bem_vindo"></audio>
   <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
   <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
   <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
