--- a/newSongs.html
+++ b/newSongs.html
@@ -21,8 +21,8 @@
 <body>
   <button><a href="index.html">Velhos Sons</a></button>
   <section class="teclado">
-    <button onclick="tocaSomShoryuken()" class="tecla tecla_shoryuken"><img src="images/poder.png" alt="">Shoryu</button>
-    <button onclick="tocaSomKid()" class="tecla tecla_kid"><img src="images/pais.png" alt="">Kid</button>
+    <button onclick="tocaSomShoryuken()" class="tecla tecla_shoryuken"><img src="images/poder.png" alt=""></button>
+    <button onclick="tocaSomKid()" class="tecla tecla_kid"><img src="images/pais.png" alt=""></button>
     <button onclick="tocaSomBemVindo()" class="tecla tecla_bem_vindo">Bem-Vindo</button>
 
     <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
