--- a/newSongs.html
+++ b/newSongs.html
@@ -23,7 +23,7 @@
   <section class="teclado">
     <button onclick="tocaSomShoryuken()" class="tecla tecla_shoryuken"><img src="images/poder.png" alt=""></button>
     <button onclick="tocaSomKid()" class="tecla tecla_kid"><img src="images/pais.png" alt=""></button>
-    <button onclick="tocaSomBemVindo()" class="tecla tecla_bem_vindo">Bem-Vindo</button>
+    <button onclick="tocaSomBemVindo()" class="tecla tecla_bem_vindo"><img src="images/bem-vindo-vallager.png" alt=""></button>
 
     <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
     <button onclick="tocaSomSplash()" class="tecla tecla_splash">Splash</button>
