--- a/newSongs.html
+++ b/newSongs.html
@@ -25,7 +25,7 @@
     <button onclick="tocaSomKid()" class="tecla tecla_kid"><img src="images/pais.png" alt=""></button>
     <button onclick="tocaSomBemVindo()" class="tecla tecla_bem_vindo"><img src="images/bem-vindo-vallager.png" alt=""></button>
 
-    <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
+    <button onclick="tocaSomFino()" class="tecla tecla_fino"><img src="images/fino.png" alt=""></button>
     <button onclick="tocaSomSplash()" class="tecla tecla_splash">Splash</button>
     <button onclick="tocaSomToim()" class="tecla tecla_toim">Toim</button>
 
