--- a/newSongs.html
+++ b/newSongs.html
@@ -37,7 +37,7 @@
   <audio src="sounds/shoryuken.mp3" id="som_tecla_shoryuken"></audio>
   <audio src="sounds/kid.mp3" id="som_tecla_kid"></audio>
   <audio src="sounds/bem-vindo.mp3" id="som_tecla_bem_vindo"></audio>
-  <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
+  <audio src="sounds/fino.mp3" id="som_tecla_fino"></audio>
   <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
   <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
   <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
